src/test/ui/parser/pat-lt-bracket-6.stderr
error: expected one of `)`, `,`, or `@`, found `[`
  --> $DIR/pat-lt-bracket-6.rs:4:19
   |
LL |     let Test(&desc[..]) = x; //~ ERROR: expected one of `)`, `,`, or `@`, found `[`
   |                   ^ expected one of `)`, `,`, or `@` here

error: aborting due to previous error

